[package]
name = "elenath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro_utils = { git = "https://github.com/TheComamba/AstroUtils.git", branch="dev/static-star-appearance" }
iced = { version = "0.10.0", features=["canvas", "lazy"] }
iced_aw = { version = "0.7.0", default-features = false, features = ["card", "modal"] }
rfd = "0.13.0" # file dialogs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-si-units = { version = "1.1", features = ["serde"] }
