[package]
name = "elenath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro_coordinates = { git = "https://github.com/TheComamba/AstroCoordinates.git", branch="main" }
astro_utils = { git = "https://github.com/TheComamba/AstroUtils.git", branch="main" }
iced = { version = "0.12.0", default-features = false, features=["canvas", "lazy"] }
iced_aw = { version = "0.9.0", default-features = false, features = ["card", "modal"] }
rfd = "0.14.0" # file dialogs (all default features are needed)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
simple-si-units = { version = "1.1", default-features = false, features = ["serde"] }
